# ha-addon-esphome-mcp

./: .gitignore  .hadolint.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  repository.yaml
.github/workflows/: test.yml
esphome-mcp/: DOCS.md  Dockerfile  apparmor.txt  config.yaml  requirements.txt.in  run.sh
esphome-mcp/server/: auth.py  config.py  health.py  limits.py  main.py  paths.py  tools.py
tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_includes.py  test_limits.py  test_mcp_wrappers.py  test_parse_device_info.py  test_paths.py  test_run_helper.py  test_smoke.py  test_tools_compile_flash.py  test_tools_devices.py  test_tools_fonts.py  test_tools_logs.py  test_tools_pull_fonts.py  test_tools_push_pull.py
