[project]
name = "esphome-mcp"
version = "0.0.0"
description = "Dev metadata only — runtime deps live in esphome-mcp/requirements.txt.in"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mcp[cli]>=1.9.0",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0",
    "asgi-lifespan>=2.1.0",
    "coverage>=7.14.1",
    "pytest-randomly>=4.1.0",
    "pytest-repeat>=0.9.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["esphome-mcp"]
testpaths = ["tests"]

[tool.uv]
package = false
